# portable-ai-memory

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/overview/: index.html
docs/spec/: schema-v1.md
extension/: background.js  manifest.json
extension/content/: chatgpt.js  common.js  gemini.js
extension/popup/: popup.css  popup.html  popup.js
schema/: portable-memory-v1.json
src/pam/: __init__.py  cli.py  config.py
src/pam/adapters/: base.py  chatgpt.py  claude.py  copilot.py  gemini.py
src/pam/api/: handlers.py  server.py
src/pam/context/: builder.py  privacy.py
src/pam/mcp/: server.py  tools.py
src/pam/memory/: extractor.py
src/pam/search/: embeddings.py  vector_store.py
src/pam/vault/: database.py  encryption.py  models.py
tests/: conftest.py
tests/test_adapters/: test_chatgpt.py  test_copilot.py  test_gemini.py
tests/test_api/: test_http_server.py
tests/test_context/: test_privacy.py
tests/test_mcp/: test_server.py
tests/test_memory/: test_extractor.py  test_llm_extractor.py
tests/test_vault/: test_database.py
