[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pam"
version = "0.1.0"
description = "Portable AI Memory — a user-owned, encrypted vault for AI conversation and memory portability across platforms"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "LK" },
]
keywords = ["ai", "memory", "portability", "llm", "chatgpt", "claude", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "platformdirs>=4.0.0",
    "jsonschema>=4.20.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
full = [
    "pysqlcipher3>=1.2.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
pam = "pam.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pam"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
